# docs2prompt

./: .aider.conf.yml  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: project-draft.md  project.md
specs/: mvp.md  project-draft.md
src/: __init__.py
src/docs2prompt/: arize_phoenix.py  console_wizard.py  custom_types.py  document_manager.py  document_processor.py  main.py  project_manager.py  prompt_generator.py  pxtest.py  token_optimizer.py  types.py
tests/: test_document_manager.py  test_main.py  test_prompt_generator.py  test_token_optimizer.py
