[tool.poetry]
name = "docs2prompt"
version = "0.1.0"
description = ""
authors = ["Olaf Geibig <GEO5BE4@bosch.com>"]
readme = "README.md"
packages = [{include = "docs2prompt", from="src"}]

[tool.poetry.scripts]
docs2prompt = "docs2prompt.main:cli"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.9.2"
pandoc = "^2.4"
click = "^8.1.7"
litellm = "^1.48.9"
prompt-toolkit = "^3.0.48"
python-dotenv = "^1.0.1"
arize-phoenix-otel = "^0.5.1"
openinference-instrumentation-openai = "^0.1.14"
openinference-instrumentation-litellm = "^0.1.4"
tenacity = "^9.0.0"
openinference-instrumentation-crewai = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
env = {PYTHONPATH = "src"}
pythonpath = ["src"]
